--- a/burger-queen/src/app/components/welcome/welcome.component.css
+++ b/burger-queen/src/app/components/welcome/welcome.component.css
@@ -10,21 +10,24 @@
     display: flex;
     height: 100vh;
     width: 100vw;
-    background-repeat: no-repeat;
-    background-image: url("https://raw.githubusercontent.com/daniandp/LIM018-burger-queen/develop/burges-queen/src/app/components/img/hamburguesas.jpeg");
+    background-image: url("../img/hamburguesas.jpeg");
+    background-repeat: repeat;
 }
+
 .contButtons, .contImgQueen{
+    
     width:50%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 100px;
+    gap: 6.25rem;
 }
 
 .contImgQueen{
     gap: 1rem;
 }
+
 .contImgQueen > h1 {
     font-size: 3rem;
     background: linear-gradient(180deg, #FFB307 0%, rgba(242, 128, 5, 0.931668) 50.35%, rgba(209, 0, 0, 0.76) 100%);
@@ -33,20 +36,23 @@
     background-clip: text;
     -webkit-text-stroke: 1px rgb(54, 47, 47);
 }
+
 .btn{
     width: 20rem;
     height: 8rem;
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
-    border-radius: 1rem 0px;
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
+    border-radius: 1rem 0;
     border-style: none;
     color: #fff;
     font-size: x-large;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+    cursor: pointer;
 }
 
 .btnWaiter{
     background: #FFB307;
 }
+
 .btnChef{
     background: #00CED1;
 }
