--- a/burger-queen/src/app/app.component.css
+++ b/burger-queen/src/app/app.component.css
@@ -1,10 +1,7 @@
-/*
+
 * {
     display: flex;
-    height: 80vh;
-    width: 100vw;
-    background-image: url("./components/img/hamburguesas.jpeg");
+    flex-direction: column;
+    background-image: url("../assets/img/fondohamburguesas.png");
     background-repeat: repeat;
-   
 }
-*/
