--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.css
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.css
@@ -1,6 +1,10 @@
 /* font-family: 'Montserrat', sans-serif; */
 /* font-family: 'Slackey', cursive; */
 
+header {
+    width: 98%;
+}
+
 .contHeader , .contBtnsHeader {
     display: flex;
     gap: 1rem;
@@ -9,7 +13,7 @@
 .contHeader {
     justify-content: space-between;
     padding: 0rem 1rem;
-    background: #FFEBBF;
+    background: rgba(195, 169, 131, 0.8);
     border-radius: 0.5rem;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
     margin: 0.5rem;
@@ -21,20 +25,19 @@
     align-items: center;
 }
 .contLogo > img {
-    height: 4rem;
+    height: 5rem;
 }
 .btn{
-    width: 10rem;
-    height: 2rem;
+    width: 12rem;
+    height: 3rem;
     box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
     border-style: none;
-    color: #fff;
-    font-size: small;
+    color: #FFFFFF;
+    font-size: medium;
     text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
     cursor: pointer;
     font-family: 'Slackey', cursive; 
-   
 }
 
 .btnWaiter{
