Se ajusta el fondo, no hay margin ni scroll

--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.html
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.html
@@ -1,13 +1,12 @@
 <header>
     <nav class="contHeader">
         <div class="contLogo">
-            <img src="https://raw.githubusercontent.com/daniandp/LIM018-burger-queen/develop/burges-queen/src/app/components/img/logoBurgerQ.png
-            " alt="logo Burger Queen">
+            <img src="./assets/img/logoBurgerQ.png" alt="logo Burger Queen">
         </div>
 
         <div class="contBtnsHeader">
-            <button class="btn btnWaiter">Tomar orden</button>
-            <button class="btn btnWaiter">Lista de pedidos</button>
+            <button class="btn btnWaiter">TOMAR ORDEN   </button>
+            <button class="btn btnWaiter">LISTA DE PEDIDOS</button>
         </div>
     </nav>
 </header>
