--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.css
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.css
@@ -3,13 +3,13 @@
 
 .contHeader , .contBtnsHeader {
     display: flex;
-    gap: 1rem;
+    gap: 10%;
 }
 
 .contHeader {
     justify-content: space-between;
     padding: 0rem 1rem;
-    background: rgba(195, 169, 131, 0.8);
+    background: rgba(195, 169, 131, 0.9);
     border-radius: 0.5rem;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
     margin: 0.5rem;
@@ -19,6 +19,7 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    min-width: 50%;
 }
 .contLogo > img {
     height: 5rem;
