--- a/burger-queen/src/app/components/name-client/name-client.component.css
+++ b/burger-queen/src/app/components/name-client/name-client.component.css
@@ -1,5 +1,5 @@
 .sectionNameClient {
-  background: rgba(195, 169, 131, 0.8);
+  background: rgba(195, 169, 131, 0.9);
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   padding: 2rem 1rem;
@@ -22,7 +22,8 @@
 }
 
 .client > h2 {
-  font-weight: 400;
+  font-weight: 700;
+  line-height:0%;
   font-size: medium;
   font-family: "Montserrat", sans-serif;
   color: #000;
