se crea el componente para los items del menu

--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.css
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.css
@@ -59,9 +59,11 @@
   }
 
   .contFoodOptions, .contItemsOrder {
+    background-color: red;
     width: 90%;
     height: 80%;
     margin: auto;
+    overflow: scroll;
   }
 
   .contItemsOrder {
