--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -5,7 +5,7 @@
             <button id="btnLunch" class="btnMenuOrder">MENU ALMUERZO Y CENA</button>
         </div>
         <div class="contFoodOptions">
-            
+            <app-item-menu></app-item-menu>
         </div>
     </section>
     <section class="contResumen">
@@ -15,7 +15,6 @@
         </div>
         <div class="contItemsOrder">
             <div class="orderResumen">
-                
             </div>
             <div class="contFooterResumen">
                 <span class="totalCash">TOTAL = $30</span>
