se crea el componente para los items seleccionados por el cliente

--- a/burger-queen/src/app/app.component.html
+++ b/burger-queen/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header-waiter></app-header-waiter>
 <!-- <app-welcome></app-welcome>
-<app-name-client></app-name-client> -->
-<app-view-waiter-order></app-view-waiter-order>
+<app-name-client></app-name-client>
+ -->
+ <app-view-waiter-order></app-view-waiter-order>
 <router-outlet></router-outlet>
