--- a/burger-queen/src/app/components/item-menu/item-menu.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu.component.html
@@ -3,8 +3,8 @@
         <img class="imageItemMenu" src="https://cdn-icons-png.flaticon.com/512/1923/1923533.png" alt="imagen item menu">
     </div>
     <div class="contItemDescription">
-        <div class="itemName">Café americano</div>
-        <div class="itemPrice">$5</div>
+        <span class="itemName">Café americano</span>
+        <div class="itemPrice">5$</div>
     </div>
     <div class="contBtnAddItem">
         <button id="addItem" class="btnAddItem">AGREGAR</button>
