--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -15,9 +15,10 @@
         </div>
         <div class="contItemsOrder">
             <div class="orderResumen">
+                <app-item-bill></app-item-bill>
             </div>
             <div class="contFooterResumen">
-                <span class="totalCash">TOTAL = $30</span>
+                <span class="totalCash">TOTAL = 12$</span>
                 <button id="sendOrder" class="btn">ENVIAR ORDEN</button>
             </div>
         </div>
