--- a/burger-queen/src/app/components/item-bill/item-bill.component.html
+++ b/burger-queen/src/app/components/item-bill/item-bill.component.html
@@ -1,1 +1,90 @@
-<p>item-bill works!</p>
+<section class="contItemReceipt">
+    <div class="itemDescription">
+        <span class="itemName">Hamburguesa/ Simple/ Pollo/ Queso/ Huevo</span>
+        <span class="itemPrice">12$</span>
+    </div>
+    <div class="contCounter">
+        <button type="button" id="removeItem" class="btnRemove">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/232/232445.png" alt="remove-item">
+        </button>
+        <span class="totalItems">1</span>
+        <button type="button" id="addItem" class="btnAdd">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/1828/1828575.png" alt="add-item">
+        </button>
+    </div>
+</section>
+<!-- <section class="contItemReceipt">
+    <div class="itemDescription">
+        <span class="itemName">Hamburguesa/ Simple/ Pollo/ Queso/ Huevo</span>
+        <span class="itemPrice">12$</span>
+    </div>
+    <div class="contCounter">
+        <button type="button" id="removeItem" class="btnRemove">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/232/232445.png" alt="remove-item">
+        </button>
+        <span class="totalItems">1</span>
+        <button type="button" id="addItem" class="btnAdd">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/1828/1828575.png" alt="add-item">
+        </button>
+    </div>
+</section>
+<section class="contItemReceipt">
+    <div class="itemDescription">
+        <span class="itemName">Hamburguesa/ Simple/ Pollo/ Queso/ Huevo</span>
+        <span class="itemPrice">12$</span>
+    </div>
+    <div class="contCounter">
+        <button type="button" id="removeItem" class="btnRemove">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/232/232445.png" alt="remove-item">
+        </button>
+        <span class="totalItems">1</span>
+        <button type="button" id="addItem" class="btnAdd">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/1828/1828575.png" alt="add-item">
+        </button>
+    </div>
+</section>
+<section class="contItemReceipt">
+    <div class="itemDescription">
+        <span class="itemName">Hamburguesa/ Simple/ Pollo/ Queso/ Huevo</span>
+        <span class="itemPrice">12$</span>
+    </div>
+    <div class="contCounter">
+        <button type="button" id="removeItem" class="btnRemove">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/232/232445.png" alt="remove-item">
+        </button>
+        <span class="totalItems">1</span>
+        <button type="button" id="addItem" class="btnAdd">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/1828/1828575.png" alt="add-item">
+        </button>
+    </div>
+</section>
+<section class="contItemReceipt">
+    <div class="itemDescription">
+        <span class="itemName">Hamburguesa/ Simple/ Pollo/ Queso/ Huevo</span>
+        <span class="itemPrice">12$</span>
+    </div>
+    <div class="contCounter">
+        <button type="button" id="removeItem" class="btnRemove">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/232/232445.png" alt="remove-item">
+        </button>
+        <span class="totalItems">1</span>
+        <button type="button" id="addItem" class="btnAdd">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/1828/1828575.png" alt="add-item">
+        </button>
+    </div>
+</section>
+<section class="contItemReceipt">
+    <div class="itemDescription">
+        <span class="itemName">Hamburguesa/ Simple/ Pollo/ Queso/ Huevo</span>
+        <span class="itemPrice">12$</span>
+    </div>
+    <div class="contCounter">
+        <button type="button" id="removeItem" class="btnRemove">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/232/232445.png" alt="remove-item">
+        </button>
+        <span class="totalItems">1</span>
+        <button type="button" id="addItem" class="btnAdd">
+            <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/1828/1828575.png" alt="add-item">
+        </button>
+    </div>
+</section> -->
