--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.css
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.css
@@ -59,12 +59,14 @@
   }
 
   .contFoodOptions, .contItemsOrder {
-    background-color: red;
     width: 90%;
     height: 80%;
     margin: auto;
-    overflow: scroll;
   }
+
+.contFoodOptions {
+  overflow: scroll;
+}
 
   .contItemsOrder {
     display: flex;
@@ -76,6 +78,7 @@
   .orderResumen {
     width: 100%;
     height: 80%;
+    overflow: scroll;
   }
   
   .contFooterResumen {
