se empieza a crear el componente container-tickets

--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.html
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.html
@@ -5,8 +5,8 @@
         </div>
 
         <div class="contBtnsHeader">
-            <button class="btn btnWaiter">TOMAR ORDEN   </button>
-            <button class="btn btnWaiter">LISTA DE PEDIDOS</button>
+            <button type="button" class="btn btnWaiter">TOMAR ORDEN</button>
+            <button type="button" class="btn btnWaiter">LISTA DE PEDIDOS</button>
         </div>
     </nav>
 </header>
