--- a/burger-queen/src/app/components/ticket-order/ticket-order.component.html
+++ b/burger-queen/src/app/components/ticket-order/ticket-order.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 </section>
-<section class="contTicketOrder">
+<!-- <section class="contTicketOrder">
     <div class="contStatusOrder">
         <span id="statusOrder" class="statusOrder">PENDIENTE</span>
     </div>
@@ -21,10 +21,10 @@
             <span id="clientName" class="clientName"> PANCHITO FLORES</span>
         </div>
         <div class="contBtnOrder">
-            <button type="button" id="idCheckOrder" class="checkOrder">VER</button>
+            <button type="button" id="idCheckOrder" class="checkOrder">VER</button> -->
             <!-- <button type="button" id="idDeliveredOrder" class="deliveredOrder">ENTREGADO</button> -->
-        </div>
+        <!-- </div>
     </div>
-</section>
+</section> -->
 <!-- REVISAR TYPE BUTTON DE LOS BOTONES
     REVISAR ID DE LOS HTML  -->
