--- a/burger-queen/src/app/components/welcome/welcome.component.html
+++ b/burger-queen/src/app/components/welcome/welcome.component.html
@@ -5,10 +5,10 @@
   </div>
   <div class="contButtons">
     <div class="contbtnWaiter">
-      <button class="btn btnWaiter">MESERO</button>
+      <button #waiterBtn type="button" class="btn btnWaiter">MESERO</button>
     </div>
     <div class="contbtnChef">
-      <button class="btn btnChef">JEFE DE COCINA</button>
+      <button type="button" class="btn btnChef">JEFE DE COCINA</button>
     </div>
   </div>
 </section>
