Se cambia la vista del welcome a la viewWaiter y se puede regresar al welcome desde el header

--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -1,3 +1,4 @@
+<app-header-waiter></app-header-waiter>
 <section class="sectionOrder">
     <section class="contMenuItems">
         <div class="contBtn">
