--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.html
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="contHeader">
         <div class="contLogo">
-            <img src="./assets/img/logoBurgerQ.png" alt="logo Burger Queen">
+            <img src="./assets/img/logoBurgerQ.png" alt="logo Burger Queen" (click) ="returnToWelcome()">
         </div>
 
         <div class="contBtnsHeader">
