cambio de rutas de welcome al nameClient y de ahí al view waiter order

--- a/burger-queen/src/app/components/name-client/name-client.component.html
+++ b/burger-queen/src/app/components/name-client/name-client.component.html
@@ -1,3 +1,4 @@
+<app-header-waiter></app-header-waiter>
 <section class="sectionNameClient">
     <div class="contNameClient">
         <div class="client">
@@ -11,7 +12,7 @@
         </div>
 
         <div class="client" >
-            <button id="idBtnGetOrder" class="btnGetOrder"type="button">INICIAR PEDIDO</button>
+            <button id="idBtnGetOrder" class="btnGetOrder"type="button" (click)="changeViewWaiter()">INICIAR PEDIDO</button>
         </div>
     </div>
 </section>
