--- a/burger-queen/src/app/components/welcome/welcome.component.html
+++ b/burger-queen/src/app/components/welcome/welcome.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="contButtons">
     <div class="contbtnWaiter">
-      <button #waiterBtn type="button" class="btn btnWaiter" (click)="changeViewWaiter()">MESERO</button>
+      <button #waiterBtn type="button" class="btn btnWaiter" (click)="changeViewClientName()">MESERO</button>
     </div>
     <div class="contbtnChef">
       <button type="button" class="btn btnChef">JEFE DE COCINA</button>
