--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.html
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="contBtnsHeader">
-            <button type="button" class="btn btnWaiter">TOMAR ORDEN</button>
+            <button type="button" class="btn btnWaiterSelected">TOMAR ORDEN</button>
             <button type="button" class="btn btnWaiter">LISTA DE PEDIDOS</button>
         </div>
     </nav>
