se sigue trabajando en actualizar el nombre del cliente en el view order component

--- a/burger-queen/src/app/components/name-client/name-client.component.html
+++ b/burger-queen/src/app/components/name-client/name-client.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="client clientInput">
-            <input id="nameClient" class="inputNameClient" placeholder=" EJEMPLO:  MARITA FLORES">
+            <input #nameClient id="nameClient" class="inputNameClient" placeholder=" EJEMPLO:  MARITA FLORES">
         </div>
 
         <div class="client" >
