se sigue probando con el nombre del cliente

--- a/burger-queen/src/app/components/name-client/name-client.component.html
+++ b/burger-queen/src/app/components/name-client/name-client.component.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="client" >
-            <button id="idBtnGetOrder" class="btnGetOrder"type="button" (click)="changeViewWaiter()">INICIAR PEDIDO</button>
+            <button id="idBtnGetOrder" class="btnGetOrder"type="button" (click)="changeViewWaiter(nameClient.value)">INICIAR PEDIDO</button>
         </div>
     </div>
 </section>
