--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -12,7 +12,7 @@
     <section class="contResumen">
         <div class="contClient">
             <div class="clientTxt">CLIENTE:</div>
-            <span id="clientName" class="clientName">ELSA YAYIN</span>
+            <span id="clientName" class="clientName">{{ clientName }}</span>
         </div>
         <div class="contItemsOrder">
             <div class="orderResumen">
