--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -6,7 +6,7 @@
             <button id="btnLunch" class="btnMenuOrder">MENU ALMUERZO Y CENA</button>
         </div>
         <div class="contFoodOptions">
-            <app-item-menu></app-item-menu>
+            <app-item-menu-lunch-and-dinner></app-item-menu-lunch-and-dinner>
         </div>
     </section>
     <section class="contResumen">
