--- a/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
@@ -1,4 +1,4 @@
-<section *ngFor="let item of Menu.lunchAndDinner.hamburgers" class="contItemMenu">
+<section *ngFor="let item of Menu.lunchAndDinner" class="contItemMenu">
     <div class="iconItemMenu">
         <img class="imageItemMenu" src="{{item.image}}" alt="imagen item menu">
     </div>
