--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.css
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.css
@@ -33,7 +33,7 @@
     border-style: none;
     color: #FFFFFF;
     font-size:  medium;
-    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
     cursor: pointer;
     font-family: 'Slackey', cursive; 
 }
