--- a/burger-queen/src/app/components/name-client/name-client.component.css
+++ b/burger-queen/src/app/components/name-client/name-client.component.css
@@ -1,7 +1,7 @@
 .sectionNameClient {
   background: rgba(195, 169, 131, 0.9);
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
+  border-radius: 0.5rem;
   padding: 2rem 1rem;
   height: 60vh;
   width: 90%;
@@ -11,7 +11,7 @@
 
 .contNameClient {
   background: rgba(255, 255, 255, 0.45);
-  border-radius: 15px;
+  border-radius: 0.5rem;
   margin: auto;
   height: 60vh;
   display: flex;
@@ -50,8 +50,8 @@
   border-radius: 0.5rem;
   border-style: none;
   color: #ffffff;
+  text-shadow: 0 0 6px #000000, 0 0 2px #000000;
   font-size: medium;
-  text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   cursor: pointer;
   font-family: "Slackey", cursive;
 }
