--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -1,6 +1,7 @@
 <app-header-waiter></app-header-waiter>
 <section class="sectionOrder">
-    <section class="contMenuItems">
+    <app-modal-burgers></app-modal-burgers>
+    <!-- <section class="contMenuItems">
         <div class="contBtn">
             <button id="btnBreakfast" class="btnMenuOrder">MENU DESAYUNO</button>
             <button id="btnLunch" class="btnMenuOrder">MENU ALMUERZO Y CENA</button>
@@ -23,5 +24,5 @@
                 <button id="sendOrder" class="btn">ENVIAR ORDEN</button>
             </div>
         </div>
-    </section>
+    </section> -->
 </section>
