--- a/burger-queen/src/app/components/welcome/welcome.component.css
+++ b/burger-queen/src/app/components/welcome/welcome.component.css
@@ -46,7 +46,7 @@
     border-style: none;
     color: #fff;
     font-size: x-large;
-    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
     cursor: pointer;
 }
 
