--- a/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
@@ -7,6 +7,9 @@
         <div class="itemPrice">${{item.price}}</div>
     </div>
     <div class="contBtnAddItem">
-        <button id="addItem" class="btnAddItem">AGREGAR</button>
+        <button id="addItem" class="btnAddItem" (click)="openModal()">AGREGAR</button>
     </div>
 </section>
+<!-- <div *ngIf="modalSwitch === true">
+    <app-modal-burgers></app-modal-burgers>
+</div> -->
