--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.css
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.css
@@ -31,6 +31,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: x-large;
+    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 
 .btnMenuOrder, .clientName, .btn, .totalCash {
