--- a/burger-queen/src/app/modal-burgers/modal-burgers.component.css
+++ b/burger-queen/src/app/modal-burgers/modal-burgers.component.css
@@ -15,6 +15,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Slackey', cursive; 
+    font-size: large;
+    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
     gap: 2%;
     height: 10vh;
     background: rgba(255, 255, 255, 0.45);
@@ -25,6 +28,14 @@
     height: 75%;
 }
 
+.contGeneral {
+    background: rgba(255, 255, 255, 0.45);
+    border-radius: 0.5rem;
+    height: 50vh;
+    margin: 1% 2%;
+}
+
+
 .contTypeBurger {
     display: flex;
     height: 10vh;
@@ -34,6 +45,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+    font-size: large;
     width: 40%;
     height: 100%;
 }
@@ -50,17 +65,19 @@
 }
 
 .listOfTypes {
-    display: flex;
-    padding: 0;
     width: 50%;
     height: 40%;
     border-radius: 0.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: large;
     text-align: center;
 }
 
+
 .contAdditionals {
     display: flex;
-    height: 35vh;
+    height: 40vh;
     flex-direction: column;
 }
 
@@ -83,6 +100,9 @@
     align-items: center;
     justify-content: center;
     gap: 10%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: large;
 }
 
 .contOptions > label > input {
@@ -98,7 +118,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10vh;
+    height: 15vh;
 }
 
 .btn {
@@ -107,10 +127,10 @@
     box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
     border-style: none;
-    color: #FFFFFF;
-    font-size:  medium;
-    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
     cursor: pointer;
     font-family: 'Slackey', cursive; 
+    font-size:  medium;
+    color: #FFFFFF;
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
     background: #FFB307;
 }
