--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.html
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.html
@@ -3,7 +3,9 @@
         <div class="contLogo">
             <img src="./assets/img/logoBurgerQ.png" alt="logo Burger Queen" (click) ="returnToWelcome()">
         </div>
-
+        <div class="contTitle">
+            <h1>Burger Queen</h1>
+        </div>
         <div class="contBtnsHeader">
             <button type="button" class="btn btnWaiterSelected">TOMAR ORDEN</button>
             <button type="button" class="btn btnWaiter">LISTA DE PEDIDOS</button>
