--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </section>
+   <!--  <div *ngIf="modalSwitch === true">
+        <app-modal-burgers></app-modal-burgers>
+    </div> -->
 </section>
-<div *ngIf="modalSwitch === true">
-    <app-modal-burgers></app-modal-burgers>
-</div>
