--- a/burger-queen/src/app/modal-burgers/modal-burgers.component.css
+++ b/burger-queen/src/app/modal-burgers/modal-burgers.component.css
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 2rem;
     width: 90vw;
     height: 70vh;
     gap: 5%;
-    background: rgba(195, 169, 131, 0.9);
+    background: rgba(195, 169, 131, 1);
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
+    position: absolute;
+    top: 20%;
+    right: 5%;
 }
 
 .contTitleModal {
