pequeñas modificaciones al modal

--- a/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
@@ -9,7 +9,7 @@
     <div class="contBtnAddItem">
         <button #btnAdd id="addItem" class="btnAddItem" (click)="openModal()">AGREGAR</button>
     </div>
+    <div *ngIf="modalSwitch && item.product.includes('Hamburguesa')">
+        <app-modal-burgers></app-modal-burgers>
+    </div>
 </section>
-<div *ngIf="modalSwitch === true">
-    <app-modal-burgers></app-modal-burgers>
-</div>
