--- a/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
@@ -10,6 +10,6 @@
         <button id="addItem" class="btnAddItem" (click)="openModal()">AGREGAR</button>
     </div>
 </section>
-<!-- <div *ngIf="modalSwitch === true">
+<div *ngIf="modalSwitch === true">
     <app-modal-burgers></app-modal-burgers>
 </div> -->
