funcionan los botones de menu desayuno y almuerzo y cena

--- a/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
@@ -12,4 +12,4 @@
     <div *ngIf="modalSwitch && item.product.includes('Hamburguesa')">
         <app-modal-burgers></app-modal-burgers>
     </div>
-</section>
+<!-- </section> -->
