--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -1,26 +1,18 @@
 <app-header-waiter></app-header-waiter>
 <section class="sectionOrder">
-    <!-- <app-modal-burgers></app-modal-burgers> -->
     <section class="contMenuItems">
         <div class="contBtn">
-            <button id="btnBreakfast" class="btnMenuOrder" (click)="showBreakfast()" >MENU DESAYUNO</button>
+            <button id="btnBreakfast" class="btnMenuOrder" (click)="showBreakfast()">MENU DESAYUNO</button>
             <button id="btnLunch" class="btnMenuOrder" (click)="showLunchAndDinner()">MENU ALMUERZO Y CENA</button>
         </div>
-        <div class="contFoodOptions" *ngIf="breakfastSwitch; else prueba">
-        
-         <div>
-            <app-item-menu></app-item-menu>
-        </div>
-        
-         <ng-template #prueba>
-             <app-item-menu-lunch-and-dinner></app-item-menu-lunch-and-dinner>
-        </ng-template>
+        <div class="contFoodOptions">
+            <div class="menuBreakfast" *ngIf="breakfastSwitch">
+                <app-item-menu></app-item-menu>
+            </div>
 
-
-           <!-- <div *ngIf="lunchAndDinnerSwitch">
+            <div class="menuLunchAndDinner" *ngIf="lunchAndDinnerSwitch">
                 <app-item-menu-lunch-and-dinner></app-item-menu-lunch-and-dinner>
-            </div> -->  
-
+            </div>
         </div>
     </section>
     <section class="contResumen">
