se vinculan el menú con el componente de la orden del cliente

--- a/burger-queen/src/app/components/item-bill/item-bill.component.html
+++ b/burger-queen/src/app/components/item-bill/item-bill.component.html
@@ -1,7 +1,7 @@
 <section class="contItemReceipt">
     <div class="itemDescription">
-        <span class="itemName">Hamburguesa/ Simple/ Pollo/ Queso/ Huevo</span>
-        <span class="itemPrice">12$</span>
+        <span #itemName class="itemName">{{itemName}}</span>
+        <span #itemPrice class="itemPrice">{{itemPrice}}</span>
     </div>
     <div class="contCounter">
         <button type="button" id="removeItem" class="btnRemove">
