se intenta crear dinámicamente la orden de pedidos

--- a/burger-queen/src/app/components/item-bill/item-bill.component.html
+++ b/burger-queen/src/app/components/item-bill/item-bill.component.html
@@ -1,7 +1,7 @@
 <section class="contItemReceipt">
     <div class="itemDescription">
-        <span #itemName class="itemName">{{itemName}}</span>
-        <span #itemPrice class="itemPrice">{{itemPrice}}</span>
+        <span #itemName class="itemName">{{itemName.textContent}}</span>
+        <span #itemPrice class="itemPrice">{{itemPrice.textContent}}</span>
     </div>
     <div class="contCounter">
         <button type="button" id="removeItem" class="btnRemove">
