se condiciona el modal del menú lunch and dinner para las hamburguesas

--- a/burger-queen/src/app/components/item-menu/item-menu.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu.component.html
@@ -7,6 +7,6 @@
         <div #price class="itemPrice">${{item.price}}</div>
     </div>
     <div class="contBtnAddItem">
-        <button id="addItem" class="btnAddItem" (click)="getElemMenu()">AGREGAR</button>
+        <button id="addItem" class="btnAddItem" (click)="getElemMenu(item)">AGREGAR</button>
     </div>
 </section>
