--- a/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
@@ -7,9 +7,9 @@
         <div class="itemPrice">${{item.price}}</div>
     </div>
     <div class="contBtnAddItem">
-        <button #btnAdd id="addItem" class="btnAddItem" (click)="openModal()">AGREGAR</button>
+        <button #btnAdd id="addItem" class="btnAddItem" (click)="openModal(item)">AGREGAR</button>
     </div>
-    <div *ngIf="modalSwitch && item.product.includes('Hamburguesa')">
+    <div *ngIf="modalSwitch">
         <app-modal-burgers></app-modal-burgers>
     </div>
-<!-- </section> -->
+</section>
