--- a/burger-queen/src/app/modal-burgers/modal-burgers.component.html
+++ b/burger-queen/src/app/modal-burgers/modal-burgers.component.html
@@ -9,11 +9,11 @@
                 <h3>TIPO DE HAMBURGUESA:</h3>
             </div>
             <div class="contListOfTypes">
-            <select class="listOfTypes">
-                <option disabled selected>SELECCIONAR</option>
-                <option value="veganType">VEGANA</option>
-                <option value="beafType">CARNE</option>
-                <option value="chickenType">POLLO</option>
+            <select #selectType class="listOfTypes">
+                <option disabled value="unselect" selected>SELECCIONAR</option>
+                <option #veganType value="vegan">VEGANA</option>
+                <option #beafType value="beaf">CARNE</option>
+                <option #chickenType value="chicken">POLLO</option>
             </select>
             </div>
         </div>
@@ -24,12 +24,12 @@
                 </div>
                     <div class="contOptions">
                         <label for="optionCheese">
-                            <input type="radio" value="cheese" id="optionCheese" name="additionals">
+                            <input #addCheese type="radio" value="cheese" id="optionCheese">
                             QUESO 
                             <img src="https://cdn-icons-png.flaticon.com/512/883/883514.png" alt="icono de queso">
                         </label>
                         <label for="optionEgg">
-                            <input type="radio" value="cheese" id="optionEgg" name="additionals">
+                            <input #addEgg type="radio" value="egg" id="optionEgg">
                             HUEVO
                             <img src="https://cdn-icons-png.flaticon.com/512/817/817324.png" alt="icono de huevo">
                         </label>
