se muestra las hamburguesas con sus opciones y adicionales, se comenta el código

--- a/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
+++ b/burger-queen/src/app/components/item-menu/item-menu-lunch-and-dinner/item-menu-lunch-and-dinner.component.html
@@ -48,7 +48,7 @@
                             </div>
                     </div>
                     <div class="contBtnAcept">
-                        <button #btnAceptModal type="button" class="btn" (click)="closeModal(item)">ACEPTAR</button>
+                        <button #btnAceptModal type="button" class="btn" (click)="closeModal()">ACEPTAR</button>
                     </div>
                     <div *ngIf="selectType.value === 'unselect'">ELIGE EL TIPO DE HAMBURGUESA</div>
                 </div>
