reformulación de armado de array con la orden para enviar a firebase

--- a/burger-queen/src/app/components/item-bill/item-bill.component.html
+++ b/burger-queen/src/app/components/item-bill/item-bill.component.html
@@ -4,11 +4,11 @@
         <span #itemPrice class="itemPrice">${{item.subTotal}}</span>
     </div>
     <div class="contCounter">
-        <button type="button" id="removeItem" class="btnRemove">
+        <button #removeItem type="button" id="removeItem" class="btnRemove">
             <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/232/232445.png" alt="remove-item">
         </button>
         <span class="totalItems">{{item.cont}}</span>
-        <button type="button" id="addItem" class="btnAdd">
+        <button #addItem type="button" id="addItem" class="btnAdd">
             <img class="iconsCounter" src="https://cdn-icons-png.flaticon.com/512/1828/1828575.png" alt="add-item">
         </button>
     </div>
