funciona el precio total de la orden

--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -25,7 +25,7 @@
                 <app-item-bill></app-item-bill>
             </div>
             <div class="contFooterResumen">
-                <span class="totalCash">TOTAL = 12$</span>
+                <span class="totalCash">Total= ${{totalPrice}}</span>
                 <button id="sendOrder" class="btn">ENVIAR ORDEN</button>
             </div>
         </div>
